# pipecat

./: CLAUDE.md  ESP32_BRANCH_README.md  ESP32_BUILD_COMMANDS.md  ESP32_DEV_HANDOFF.md  ESP32_MIGRATION_GUIDE.md  ESP32_MIGRATION_PLAN.md  ESP32_WEBSOCKET_PROTOCOL.md  FACE_TRACKING_PIPELINE.md  Readmetouchdisplayscreen.md  calendar_integration.py  luna_face_renderer.py  my_bot.py
ESP-IDF-v5.4.2/: .gitignore
ESP-IDF-v5.4.2/05_Spec_Analyzer/: QUICK_START.md  README_BUILD.md  TROUBLESHOOTING.md  monitor.sh
docs/: NOTIFICATION_DEVICE.md  NOTIFICATION_IOS_APP.md  NOTIFICATION_SERVER.md
esp32-luna/: CMakeLists.txt  LVGL_DEBUG.md  REFACTOR_PROGRESS.md  flash.sh  partitions.csv  sdkconfig  sdkconfig.defaults
esp32-luna/components/audio/: CMakeLists.txt  audio_capture.c  audio_capture.h  audio_manager.c  audio_manager.h  audio_playback.c  audio_playback.h
esp32-luna/components/luna_face/: CMakeLists.txt  emotions.c  emotions.h  face_renderer.c  face_renderer.h
esp32-luna/components/luna_motion/: CMakeLists.txt  luna_motion.c  luna_motion.h
esp32-luna/components/network/: CMakeLists.txt  luna_protocol.c  luna_protocol.h  wifi_manager.c  wifi_manager.h  ws_client.c  ws_client.h
esp32-luna/components/power/: CMakeLists.txt  pmu_manager.c  pmu_manager.h
esp32-luna/components/waveshare__esp32_s3_touch_amoled_2_06/include/bsp/: esp32_s3_touch_amoled_2_06.h
esp32-luna/components/webrtc_client/: CMakeLists.txt  README.md  webrtc_client.c  webrtc_client.h
esp32-luna/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32-luna/simulator/: CMakeLists.txt  README.md  lv_conf.h  main.c
esp32-luna/simulator/fonts/: lv_font_montserrat_64.c
esp32-luna/simulator/hal/: sdl_audio.c  sdl_audio.h  sdl_display.c  sdl_display.h  sdl_mouse.c  sdl_mouse.h
esp32-luna/simulator/net/: ws_client_sim.c  ws_client_sim.h
esp32-luna/simulator/stubs/: esp_err.h  esp_log.h  esp_random.h  esp_stubs.c  esp_timer.h
esp32-luna/simulator/stubs/bsp/: esp-bsp.h
esp32-luna/simulator/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
olddocs/: ESP32S3Display.md  ESP32_BACKEND_CHANGES.md  ESP32_COMPLETE_GUIDE.md  ESP32_HARDWAREDOCS.md  ESP32_MIGRATION_PLAN.md  ESP32_QUICK_START.md  ESP32_SETUP_INSTRUCTIONS.md
pi/: README.md  luna_pi_client.py  luna_pi_debug.py  luna_pi_standalone.py  requirements-pi.txt  run.sh  setup.sh  setup_pi.sh
scripts/: esp32_setup.sh
static/: client.html  index.html  luna.html  luna_face.css  luna_face.html  luna_face.js
